--- a/home.css
+++ b/home.css
@@ -7,6 +7,7 @@
 
 html {
 	font-size: 75%;
+	background: url("./Media/backgroundImage.jpg");
 }
 
 body {
@@ -24,11 +25,11 @@ div {
 	position: relative;
 }
 
-.header {
-	position: fixed;
-	top: 30%;
-	left: 0%;
-	width: 100%;
+#logo {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
 
 .navigation { 
@@ -74,19 +75,6 @@ div {
 
 li {
 	display: inline;
-}
-
-.imageLeft {
-	position: fixed;
-	top: 25%;
-	left: 17%;
-}
-
-.imageRight {
-	transform: scaleX(-1);
-	position: fixed;
-	top: 25%;
-	right: 17%;
 }
 
 .container {
