--- a/home.css
+++ b/home.css
@@ -45,7 +45,7 @@ div {
 	font-size: 2.3em;
 	letter-spacing: 0.1em;
 	padding-right: 2.5em;
-	color: #DF7D60;
+	color: #d8cdec;
 	text-align: center;
 	text-shadow: 0.05em 0.05em 0.1em #C0C0C0;
 }
