--- a/home.css
+++ b/home.css
@@ -41,7 +41,7 @@ div {
 }
 
 .navigation a {
-	font-family: Times, Times New Roman, serif;
+	font-family: Cormorant Garamond;
 	font-size: 2.3em;
 	letter-spacing: 0.1em;
 	padding-right: 2.5em;
