--- a/home.css
+++ b/home.css
@@ -37,6 +37,7 @@ header {
 }
 
 #newsletter h2 {
+    font-family: 'Brush Script MT', cursive;
     margin-bottom: 10px; /* Spacing below the heading */
 }
 
