--- a/home.css
+++ b/home.css
@@ -37,7 +37,7 @@ header {
 }
 
 #newsletter h2 {
-    font-family: Eye Catching Pro;
+    font-family: Eye Catching Pro, cursive;
     letter-spacing: 0.1px;
     margin-bottom: 10px; /* Spacing below the heading */
 }
